--- a/Frontend/src/styles/AssetCard.css
+++ b/Frontend/src/styles/AssetCard.css
@@ -5,39 +5,97 @@
   cursor: pointer;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   perspective: 1000px;
+  width: 24rem;  
   height: 16rem;
-  min-width: 24rem;
+  font-size: 1rem;
   position: relative;
   overflow: hidden;
 }
 
 .asset-card-wrapper:hover {
   transform: translateY(-5px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15),
+              0 0 0 2px #478cff,
+              0 0 15px rgba(71, 140, 255, 0.5);
 }
+
+.card-chip { 
+    width: 60px; 
+    height: auto;
+}
+
+
+.card-chip-back {
+    width: 50px; 
+    height: auto;
+}
+
+
+.card-type-logo {
+    width: 3.5rem; 
+}
+
+
+.card-chip-logo-center-right {
+    width: 50px; 
+    height: auto;
+}
+
+
+
+.card-size-large .asset-card-wrapper {
+    width: 18rem;      
+    height: 12rem;     
+    font-size: 0.75rem;
+}
+
+.card-size-large .card-chip,
+.card-size-large .card-chip-back {
+    width: 45px; 
+}
+.card-size-large .card-type-logo {
+    width: 2.625rem; 
+}
+.card-size-large .card-chip-logo-center-right {
+    width: 37.5px; 
+}
+
+
 
 .card-size-medium .asset-card-wrapper {
-    min-width: 19rem;
+    width: 12rem;      
+    height: 8rem;      
+    font-size: 0.5rem; 
 }
 
-.card-size-medium .card-number-back{
-  font-size: 1em;
+.card-size-medium .card-chip,
+.card-size-medium .card-chip-back {
+    width: 30px; 
 }
+.card-size-medium .card-type-logo {
+    width: 1.75rem; 
+}
+.card-size-medium .card-chip-logo-center-right {
+    width: 25px; 
+}
+
+
 
 .card-size-small .asset-card-wrapper {
-    min-width: 17rem;
+    width: 8.4rem;     
+    height: 5.6rem;    
+    font-size: 0.35rem;
 }
 
-.card-size-small .card-top-left-name{
-  width: 100px;
+.card-size-small .card-chip,
+.card-size-small .card-chip-back {
+    width: 21px; 
 }
-
-.card-size-small .card-balance-value{
-  font-size: 22px;
+.card-size-small .card-type-logo {
+    width: 1.225rem; 
 }
-
-.card-size-small .card-number-back{
-  font-size: 0.8em;
+.card-size-small .card-chip-logo-center-right {
+    width: 17.5px; 
 }
 
 
