--- a/Frontend/src/styles/ExecutorsPage.css
+++ b/Frontend/src/styles/ExecutorsPage.css
@@ -132,7 +132,7 @@
     font-weight: 600;
     position: sticky;
     top: 0;
-    border-bottom: 1px solid var(--border--color);
+    border-right: 1px solid var(--bg-color);
 }
 
 .executors-table thead tr th:first-child {
@@ -163,6 +163,9 @@
     text-overflow: ellipsis;
     color: var(--text-color);
     vertical-align: middle;
+    border-bottom: 1px solid var(--bg-color);
+    border-top: 1px solid var(--bg-color);
+    border-right: 1px solid var(--bg-color);
 }
 
 .view-mode-buttons {
@@ -183,14 +186,16 @@
 }
 
 .view-mode-button.active {
-    background-color: #555;
+    background-color: #478cff;
     color: #fff;
 }
 
 .executors-cards-container {
     padding: 20px;
     border-radius: 8px;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
+
 
 .performer-group {
     margin-bottom: 32px;
