--- a/Frontend/src/styles/JournalPage.css
+++ b/Frontend/src/styles/JournalPage.css
@@ -13,7 +13,6 @@
 
 .journal-header-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
     position: relative;
@@ -43,7 +42,8 @@
 
 .journal-table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: separate;
+    table-layout: fixed; 
 }
 
 
@@ -53,6 +53,9 @@
     text-align: left;
     border-bottom: 1px solid var(--border--color);
     color: var(--text-color);
+    text-overflow: ellipsis;
+    white-space: nowrap; 
+    overflow: hidden; 
     text-overflow: ellipsis;
 }
 
@@ -65,11 +68,15 @@
     font-weight: 500;
     font-size: 15px;
     color: var(--chips-color);
+    border-right: 1px solid var(--bg-color);
 }
 
 
 .journal-table tbody td {
     font-size: 15px;
+    border-right: 1px solid var(--bg-color);
+    border-top: 1px solid var(--bg-color);
+    border-bottom: 1px solid var(--bg-color);
 }
 
 
@@ -83,17 +90,13 @@
 }
 
 .search-container {
-    width: 100%;
-    max-width: 800px;
-    background-color: var(--container-bg);
-    border-radius: 8px;
-    padding: 15px 20px;
-    position: absolute;
-    top: -12px; 
-    left: 50%; 
-    transform: translateX(-50%); 
-    z-index: 50; 
-    box-sizing: border-box; 
+    flex-grow: 1; 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    padding: 0 20px;
+    position: relative; 
+    z-index: 100;
 }
 
 .main-search-bar {
@@ -102,6 +105,7 @@
     border: 1px solid var(--border--color);
     border-radius: 6px;
     padding: 8px 12px;
+    width: 100%;
     background-color: var(--container-bg); 
 }
 
@@ -133,12 +137,23 @@
 }
 
 .advanced-search-fields {
-    margin-top: 15px;
+    position: absolute; 
+    top: 100%; 
+    left: 0; 
+  
+    width: 100%; 
+    background-color: var(--container-bg); 
+    border: 1px solid var(--border--color);
+    border-radius: 0 0 8px 8px; 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+    padding: 15px 20px; 
+    z-index: 99; 
+    box-sizing: border-box; 
+
+    /* Остальные стили для сетки остаются */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
-    padding-top: 15px;
-    border-top: 1px solid var(--border--color);
 }
 
 .search-field-group {
