--- a/Frontend/src/styles/AddLogEntryForm.css
+++ b/Frontend/src/styles/AddLogEntryForm.css
@@ -96,6 +96,9 @@
     font-size: 15px;
     outline: none;
     box-sizing: border-box;
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none;
 }
 
 .form-content input:focus,
