--- a/Frontend/src/styles/EmployeeModal.css
+++ b/Frontend/src/styles/EmployeeModal.css
@@ -2,14 +2,14 @@
 .employee-modal-overlay {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 72px;
+  width: calc(100% - 72px);
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7); 
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 87;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -24,8 +24,8 @@
   width: 100%; 
   height: 100vh;
   
-  background: #2a2a3e; 
-  color: #e0e0e0;
+  background: var(--bg-color); 
+  color: var(--chips-color);
   
   border-radius: 8px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
@@ -44,11 +44,9 @@
 
 
 .left-panel {
-  flex: 0 0 700px; 
+  flex: 0 0 1000px; 
   display: flex;
-  flex-direction: column;
-  background-color: #2a2a3e; 
-  border-right: 1px solid #444; 
+  flex-direction: column; 
 }
 
 
@@ -56,8 +54,6 @@
   flex: 1 1 auto; 
   display: flex;
   flex-direction: column;
-  background-color: #252538; 
-  border-right: 1px solid #444;
 }
 
 
@@ -65,18 +61,19 @@
   flex: 0 0 300px; 
   display: flex;
   flex-direction: column;
-  background-color: #2a2a3e; 
   padding: 15px;
 }
 
+
+.chat-placeholder{
+  background-color: var(--container-bg);
+}
 
 .chat-placeholder,
 .actions-placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #888;
-  background-color: #1e1e2d; 
   text-align: center;
   padding: 20px;
   height: 100%;
@@ -86,37 +83,53 @@
 .employee-modal-body {
   flex-grow: 1;
   overflow-y: auto;
-  padding: 24px;
-  background: #1e1e2d;
 }
 
 .tab-section {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 16px 24px;
+  padding: 24px;
 }
 
 .form-field {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 8px 0;
+  gap: 15px;
 }
 .form-field.full-width, .form-fieldset {
   grid-column: 1 / -1;
   border: none;
 }
 .form-field label {
-  font-size: 13px;
-  color: #c0c0c0;
-  margin-bottom: 6px;
+  align-items: center;
+  width: 220px;
+  font-weight: 500;
+  font-size: 14px;
+  color: var(--chips-color);
+  flex-shrink: 0;
+  padding-top: 4px;
 }
+
 .form-field input,
-.form-field select,
+.form-field select{
+  background-color: var(--container-bg);
+    border: none;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    color: var(--container-text-color);
+    padding: 10px 12px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+    min-width: 170px;
+}
+
 .form-field textarea {
-  background: #252538;
   border: 1px solid #555;
   border-radius: 4px;
   padding: 10px 12px;
-  color: #e0e0e0;
   font-size: 14px;
   transition: border-color 0.2s;
 }
@@ -124,7 +137,6 @@
 .form-field select:focus,
 .form-field textarea:focus {
   outline: none;
-  border-color: #6a6aff;
 }
 .error {
   font-size: 12px;
@@ -135,46 +147,11 @@
   border-color: #ff8a8a !important;
 }
 
-/* Кнопки "Сбросить" / "Сохранить" */
-.form-actions-bottom {
-  display: flex;
-  justify-content: flex-end;
-  gap: 12px;
-  padding: 16px 24px;
-  border-top: 1px solid #444; 
-}
-.form-actions-bottom button {
-  all: unset;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: background-color 0.2s;
-}
-.form-actions-bottom button[type="submit"] {
-  background: #6a6aff;
-  color: white;
-}
-.form-actions-bottom button[type="submit"]:hover {
-  background: #5a5aff;
-}
-.form-actions-bottom button[type="button"] {
-  background: #444;
-  color: #e0e0e0;
-}
-.form-actions-bottom button[type="button"]:hover {
-  background: #555;
-}
-.form-actions-bottom button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
 
 /* Стили для табов */
 .tabs-nav {
   padding: 0 16px;
-  border-top: 1px solid #444;
-  background: #2a2a3e;
+  background: var(--bg-menu-color);
 }
 .tabs-nav ul {
   display: flex;
