--- a/Frontend/src/styles/JournalPage.css
+++ b/Frontend/src/styles/JournalPage.css
@@ -22,7 +22,7 @@
 }
 
 .journal-title {
-    font-size: 22px;
+    font-size: var(--font-size-page-title);
     font-weight: 700;
     display: flex;
     text-transform: uppercase;
@@ -36,7 +36,6 @@
 
 .journal-table-container {
     background-color: var(--container-bg);
-    border-radius: 8px;
     overflow: auto;
 }
 
@@ -66,14 +65,13 @@
 
 .journal-table th {
     font-weight: 500;
-    font-size: 15px;
-    color: var(--chips-color);
+    font-size: var(--font-size-table-header);
     border-right: 1px solid var(--bg-color);
 }
 
 
 .journal-table tbody td {
-    font-size: 15px;
+    font-size: var(--font-size-table-text);
     border-right: 1px solid var(--bg-color);
     border-top: 1px solid var(--bg-color);
     border-bottom: 1px solid var(--bg-color);
@@ -82,6 +80,10 @@
 
 .journal-table tbody tr:last-child td {
     border-bottom: none;
+}
+
+.journal-table tbody tr.journal-table-row:hover{
+    background-color: var(--input-border-focus);
 }
 
 .status-icon-cell {
@@ -241,18 +243,18 @@
 
 
 .add-entry-button {
-    background-color: var(--button-bg); 
-    color: var(--text-color); 
+    background-color: var(--container-bg);
+    color: #fff;
     padding: 10px 20px;
     border: none;
-    border-radius: 6px;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
-    transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease;
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 8px; 
+    gap: 5px;
 }
 
 .add-entry-button:hover {
