--- a/Frontend/src/styles/LogEntryDetails.css
+++ b/Frontend/src/styles/LogEntryDetails.css
@@ -182,6 +182,9 @@
     font-size: 15px;
     outline: none;
     box-sizing: border-box;
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none;
 }
 
 .log-entry-details-content select:focus {
