--- a/Frontend/src/styles/OrderModal.css
+++ b/Frontend/src/styles/OrderModal.css
@@ -4,7 +4,7 @@
     height: 100%;
     background-color: var(--container-bg);
     color: var(--container-text-color);
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
@@ -14,7 +14,7 @@
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  width: 39%;
+  width: 42.5%;
   height: 100%;
 }
 
@@ -27,9 +27,8 @@
   padding: 20px;
 }
 .order-modal-content {
-    background-color: var(--bg-menu-color);
+    padding: 0;
     border-radius: 8px 0 0 8px;
-    padding: 20px 30px;
     width: 50%;
     max-width: none;
     height: 100%;
@@ -38,7 +37,24 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    border-right: 1px solid var(--border--color);
 }
+
+.order-modal-header-section {
+  background-color: var(--bg-menu-color);
+  color: var(--text-color);
+  padding: 30px 30px 0; 
+  flex-shrink: 0; 
+}
+
+.order-modal-body-section {
+  padding: 20px 30px;
+  flex-grow: 1; 
+  overflow-y: auto;
+  
+}
+
+
 
 .right-side-menu {
   width: 80px;
@@ -110,7 +126,6 @@
 .order-modal-form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     width: 100%;
 }
 .modal-header {
@@ -467,8 +482,7 @@
 .order-menu-title {
     margin-right: 8px;
 }
-.tab-content-input,
-.custom-content-input {
+.tab-content-input{
     background: none;
     border: none;
     outline: none;
@@ -476,14 +490,24 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     color: var(--container-text-color);
-    background-color: var(--container-bg);
-    padding: 4px 8px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+    padding: 10px 12px;
     min-width: 150px;
 }
-.tab-content-input:focus,
-.custom-content-input:focus {
-    border-color: var(--container-text-color);
+
+.custom-content-input{
+    background-color: var(--container-bg);
+    border: none;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    color: var(--container-text-color);
+    padding: 10px 12px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+    min-width: 170px;
 }
+
 .workplan-textarea {
     background: none;
     border: 1px solid rgba(128, 128, 128, 0.2);
@@ -737,7 +761,6 @@
 
 .payment-log-table {
     border: 1px solid var(--border--color);
-    border-radius: 6px;
     overflow: hidden;
     margin-top: 10px;
     display: flex;
@@ -747,11 +770,12 @@
 
 .payment-log-header {
     display: grid;
-    grid-template-columns: 2fr 3fr 3fr 2fr 2fr 0.5fr; 
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr; 
     background-color: var(--secondary-background);
     padding: 10px 0;
     font-weight: bold;
     border-bottom: 1px solid var(--border--color);
+    min-height: 20px;
 }
 
 .payment-log-header div {
@@ -761,23 +785,30 @@
 
 .payment-log-row {
     display: grid;
-    grid-template-columns: 2fr 3fr 3fr 2fr 2fr 0.5fr;
+    grid-template-columns: 2fr 3fr 3fr 2fr 2fr;
     border-bottom: 1px solid var(--border--color);
     align-items: center;
+    text-align: center;
 }
 
 .payment-log-row:last-child {
     border-bottom: none;
+    border-right: none;
 }
 
 .payment-log-row input {
+    min-height: 40px;
     border: none;
     background-color: transparent;
-    width: 105px;
     box-sizing: border-box;
     color: var(--container-text-color);
     outline: none;
+     border-right: 1px solid var(--border--color);
     text-align: center;
+}
+
+.payment-log-row input:nth-child(5){
+    border-right: none;
 }
 
 .payment-log-row input:focus {
@@ -835,7 +866,7 @@
 .work-log-header,
 .work-log-row {
     display: grid;
-    grid-template-columns: 2fr 1.5fr 1.5fr 1fr 3fr 0.5fr; 
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr; 
     align-items: center;
 }
 
@@ -844,6 +875,7 @@
     padding: 10px 0;
     font-weight: bold;
     border-bottom: 1px solid var(--border--color);
+    min-height: 20px;
 }
 
 .work-log-header div {
@@ -859,18 +891,22 @@
     border-bottom: none;
 }
 
+
 .work-log-row input,
 .work-log-row textarea {
     border: none;
     background-color: transparent;
-    padding: 10px;
-    width: 100%;
     box-sizing: border-box;
     color: var(--container-text-color);
     outline: none;
     text-align: center;
     resize: vertical; 
     min-height: 40px; 
+    border-right: 1px solid var(--border--color);
+}
+
+.work-log-row textarea{
+    border-right: none;
 }
 
 .work-log-row input:focus,
