--- a/Frontend/src/styles/CurrencyRates.css
+++ b/Frontend/src/styles/CurrencyRates.css
@@ -63,6 +63,7 @@
     top: 0;
     text-align: center;
     border-right: 1px solid var(--bg-color);
+    border-bottom: 10px solid var(--bg-color);
 }
 
 
