--- a/Frontend/src/styles/EmployeesPage.css
+++ b/Frontend/src/styles/EmployeesPage.css
@@ -191,7 +191,7 @@
 .cards-container {
     margin-top: 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
     gap: 16px; 
     padding: 0 10px;
 }
@@ -199,7 +199,7 @@
 
 
 .employee-card {
-    background-color: #1c1c1e;
+    background-color: var(--container-bg);
     border-radius: 12px;
     padding: 16px;
     cursor: pointer;
