--- a/Frontend/src/styles/JournalPage.css
+++ b/Frontend/src/styles/JournalPage.css
@@ -67,6 +67,7 @@
     font-weight: 500;
     font-size: var(--font-size-table-header);
     border-right: 1px solid var(--bg-color);
+    border-bottom: 10px solid var(--bg-color);
 }
 
 
