--- a/Frontend/src/styles/TransactionsPage.css
+++ b/Frontend/src/styles/TransactionsPage.css
@@ -87,14 +87,15 @@
     top: 0;
     border-right: 1px solid var(--bg-color);
     text-align: center;
+    border-bottom: 10px solid var(--bg-color);
 }
 
 .transactions-table thead tr th:first-child {
-    border-top-left-radius: 8px;
+    
 }
 
 .transactions-table thead tr th:last-child {
-    border-top-right-radius: 8px;
+    
 }
 
 .transactions-table tbody tr.transaction-row {
@@ -108,6 +109,7 @@
 .transactions-table tbody tr.transaction-row:hover {
     background-color: var(--input-border-focus);
 }
+
 
 .transactions-table td {
     padding: 12px 15px;
