--- a/Frontend/src/styles/OrderModal.css
+++ b/Frontend/src/styles/OrderModal.css
@@ -312,15 +312,15 @@
 }
 .tags-section-header {
     display: flex;
-    flex-direction: row;       
+    flex-wrap: wrap;      
     align-items: flex-start;  
     width: 100%;
     gap: 10px;
 }
-.tag-input-container-header {
+.tag-input-header {
     position: relative;
 }
-.input-tag-header {
+.input-tag {
     background: none;
     border: none;
     outline: none;
@@ -575,7 +575,6 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin-top: 20px;
 }
 .tab-content-title-section {
     display: flex;
@@ -586,7 +585,6 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 8px 0;
     gap: 15px;
 }
 .tab-content-row:last-child {
@@ -599,7 +597,7 @@
     font-size: 14px;
     color: var(--chips-color);
     flex-shrink: 0;
-    padding-top: 4px;
+    padding-top: 9px;
 }
 .order-menu-title {
     margin-right: 8px;
